jump bug fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,13 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow: hidden;
+    height: 100%;
+}
+html { 
+    height: 100%;
+}
+
+.scroll-wrapper {
+    overflow: scroll; height: 100%;
 }
